--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1>Hello there!</h1>
-	<a href="/contact.html">contact</a>
+	<a href="kirstenw4.github.io/contact.html">contact</a>
 	<p> here's some text. here's some text. </p>
 	<p>here's some more text. here's some more text. </p>
 </body>
